<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <RadioGroup
        android:id="@+id/sortRadioGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <com.daily.base.widget.DailyRadioButton
            android:id="@+id/regionRadioButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawableRight="@drawable/selector_filter_radio_button"
            android:gravity="center_vertical"
            android:text="@string/label_sort_by_area"
            android:textColor="@color/selector_text_color_d4d4d4d_seb2135"
            android:textSize="14dp"/>

        <com.daily.base.widget.DailyRadioButton
            android:id="@+id/distanceRadioButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawableRight="@drawable/selector_filter_radio_button"
            android:gravity="center_vertical"
            android:text="@string/label_sort_by_distance"
            android:textColor="@color/selector_text_color_d4d4d4d_seb2135"
            android:textSize="14dp"/>

        <com.daily.base.widget.DailyRadioButton
            android:id="@+id/lowPriceRadioButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawableRight="@drawable/selector_filter_radio_button"
            android:gravity="center_vertical"
            android:text="@string/label_sort_by_low_price"
            android:textColor="@color/selector_text_color_d4d4d4d_seb2135"
            android:textSize="14dp"/>

        <com.daily.base.widget.DailyRadioButton
            android:id="@+id/highPriceRadioButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawableRight="@drawable/selector_filter_radio_button"
            android:gravity="center_vertical"
            android:text="@string/label_sort_by_high_price"
            android:textColor="@color/selector_text_color_d4d4d4d_seb2135"
            android:textSize="14dp"/>

        <com.daily.base.widget.DailyRadioButton
            android:id="@+id/satisfactionRadioButton"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginTop="5dp"
            android:layout_weight="1"
            android:background="@null"
            android:button="@null"
            android:drawableRight="@drawable/selector_filter_radio_button"
            android:gravity="center_vertical"
            android:text="@string/label_sort_by_satisfaction"
            android:textColor="@color/selector_text_color_d4d4d4d_seb2135"
            android:textSize="14dp"/>
    </RadioGroup>
</layout>