...
                        app:layout_constraintTop_toTopOf="parent"
                        dailyFont:style="Medium"/>

                </android.support.constraint.ConstraintLayout>

                <com.daily.dailyhotel.screen.home.search.SearchStayFilterView
                    android:id="@+id/stayFilterView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/search_box_bottom"
                    android:paddingBottom="15dp"
                    android:paddingLeft="27dp"
                    android:paddingRight="27dp"
                    android:paddingTop="14dp"
                    android:visibility="visible"/>

                <com.daily.dailyhotel.screen.home.search.SearchStayOutboundFilterView
                    android:id="@+id/stayOutboundFilterView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/search_box_bottom"
                    android:paddingBottom="15dp"
                    android:paddingLeft="27dp"
                    android:paddingRight="27dp"
                    android:paddingTop="14dp"
                    android:visibility="gone"/>

                <com.daily.dailyhotel.screen.home.search.SearchGourmetFilterView
                    android:id="@+id/gourmetFilterView"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal"
                    android:background="@drawable/search_box_bottom"
                    android:paddingBottom="15dp"
                    android:paddingLeft="27dp"
...
