...
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/vector_search_ic_01_region"/>

        <com.daily.base.widget.DailyTextView
            android:id="@+id/titleTextView"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginLeft="15dp"
            android:textColor="@color/default_text_c4d4d4d"
            android:textSize="13dp"
            app:layout_constraintBottom_toTopOf="@+id/subTitleTextView"
            app:layout_constraintLeft_toRightOf="@+id/iconImageView"
            app:layout_constraintRight_toLeftOf="@+id/rightImageView"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_chainStyle="packed"/>

        <com.daily.base.widget.DailyTextView
...
