...
            android:background="@color/default_line_cdcdcdd"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintLeft_toRightOf="@id/viewActionTextView"
            app:layout_constraintTop_toTopOf="parent"/>

        <com.daily.base.widget.DailyTextView
            android:id="@+id/filterActionTextView"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:drawablePadding="3dp"
            android:gravity="center_vertical"
            android:paddingBottom="10dp"
            android:paddingLeft="12dp"
...
