package com.twoheart.dailyhotel.util;

import android.content.Intent;
import android.net.Uri;
import android.support.test.espresso.NoMatchingViewException;
import android.support.test.espresso.UiController;
import android.support.test.espresso.ViewAction;
import android.support.test.espresso.action.ViewActions;
import android.support.test.espresso.matcher.ViewMatchers;
import android.support.test.rule.ActivityTestRule;
import android.support.test.runner.AndroidJUnit4;
import android.view.View;

import com.daily.dailyhotel.entity.GourmetBookDateTime;
import com.daily.dailyhotel.entity.StayBookDateTime;
import com.daily.dailyhotel.storage.preference.DailyPreference;
import com.twoheart.dailyhotel.DailyHotel;
import com.twoheart.dailyhotel.R;

import org.hamcrest.Matcher;
import org.hamcrest.Matchers;
import org.junit.FixMethodOrder;
import org.junit.Rule;
import org.junit.Test;
import org.junit.runner.RunWith;
import org.junit.runners.MethodSorters;

import java.util.ArrayList;
import java.util.Date;
import java.util.List;
import java.util.Locale;
import java.util.Random;

import static android.support.test.InstrumentationRegistry.getInstrumentation;
import static android.support.test.espresso.Espresso.onView;
import static android.support.test.espresso.assertion.ViewAssertions.matches;
import static android.support.test.espresso.matcher.ViewMatchers.isChecked;
import static android.support.test.espresso.matcher.ViewMatchers.isDescendantOfA;
import static android.support.test.espresso.matcher.ViewMatchers.isRoot;
import static android.support.test.espresso.matcher.ViewMatchers.withEffectiveVisibility;
import static android.support.test.espresso.matcher.ViewMatchers.withId;
import static android.support.test.espresso.matcher.ViewMatchers.withText;

@RunWith(AndroidJUnit4.class)
@FixMethodOrder(MethodSorters.NAME_ASCENDING)
public class DailyDeepLinkTest
{
    @Rule
    public ActivityTestRule<com.twoheart.dailyhotel.LauncherActivity> launcherActivityActivityTestRule = new ActivityTestRule(com.twoheart.dailyhotel.LauncherActivity.class);

    final int DELAY_SECONDS = 5;
    final int NIGHTS_RANGE = 4;
    final int DAYS_RANGE = 20;

    public static ViewAction waitFor(final long millis)
    {
        return new ViewAction()
        {
            @Override
            public Matcher<View> getConstraints()
            {
                return isRoot();
            }

            @Override
            public String getDescription()
            {
                return "Wait for " + millis + " milliseconds.";
            }

            @Override
            public void perform(UiController uiController, final View view)
            {
                uiController.loopMainThreadForAtLeast(millis);
            }
        };
    }

    @Test
    public void test_01_DeepLink_검색홈_국내스테이() throws InterruptedException
    {
        final String deepLink = "dailyhotel://dailyhotel.co.kr?vc=23&v=searchHome&pt=stay";

        launcherActivityActivityTestRule.launchActivity(new Intent().setData(Uri.parse(deepLink)));

        onView(isRoot()).perform(waitFor(DELAY_SECONDS * 1000));
        onView(withId(R.id.stayFilterView)).check(matches((withEffectiveVisibility(ViewMatchers.Visibility.VISIBLE))));
        onView(withId(R.id.stayOutboundFilterView)).check(matches((withEffectiveVisibility(ViewMatchers.Visibility.GONE))));
        onView(withId(R.id.gourmetFilterView)).check(matches((withEffectiveVisibility(ViewMatchers.Visibility.GONE))));
    }

    @Test
    public void test_DeepLink_검색홈_해외스테이() throws InterruptedException
    {
        final String deepLink = "dailyhotel://dailyhotel.co.kr?vc=23&v=searchHome&pt=stayOutbound";

        launcherActivityActivityTestRule.launchActivity(new Intent().setData(Uri.parse(deepLink)));

        onView(isRoot()).perform(waitFor(DELAY_SECONDS * 1000));
        onView(withId(R.id.stayFilterView)).check(matches((withEffectiveVisibility(ViewMatchers.Visibility.GONE))));
        onView(withId(R.id.stayOutboundFilterView)).check(matches((withEffectiveVisibility(ViewMatchers.Visibility.VISIBLE))));
        onView(withId(R.id.gourmetFilterView)).check(matches((withEffectiveVisibility(ViewMatchers.Visibility.GONE))));
    }

    @Test
    public void test_DeepLink_검색홈_고메() throws InterruptedException
    {
        final String deepLink = "dailyhotel://dailyhotel.co.kr?vc=23&v=searchHome&pt=gourmet";

        launcherActivityActivityTestRule.launchActivity(new Intent().setData(Uri.parse(deepLink)));

        onView(isRoot()).perform(waitFor(DELAY_SECONDS * 1000));
        onView(withId(R.id.stayFilterView)).check(matches((withEffectiveVisibility(ViewMatchers.Visibility.GONE))));
        onView(withId(R.id.stayOutboundFilterView)).check(matches((withEffectiveVisibility(ViewMatchers.Visibility.GONE))));
        onView(withId(R.id.gourmetFilterView)).check(matches((withEffectiveVisibility(ViewMatchers.Visibility.VISIBLE))));
    }

    @Test
    public void test_DeepLink_검색결과_국내스테이() throws Exception
    {
        final String searchKeyword = "강남";
        final int nights = new Random(System.currentTimeMillis()).nextInt(NIGHTS_RANGE) + 1;
        final int randomDay = new Random(System.currentTimeMillis()).nextInt(DAYS_RANGE) + 1;

        final StayBookDateTime bookDateTime = new StayBookDateTime();
        bookDateTime.setCheckInDateTime(DailyCalendar.format(new Date(), DailyCalendar.ISO_8601_FORMAT), randomDay);
        bookDateTime.setCheckOutDateTime(bookDateTime.getCheckInDateTime(DailyCalendar.ISO_8601_FORMAT), nights);

        ////////////////////////////////////////////////////////////////////////////////////////////
        // d=yyyyMMMdd
        {
            final String deepLink = "dailyhotel://dailyhotel.co.kr?vc=23&v=hsr&d=" + bookDateTime.getCheckInDateTime("yyyyMMdd") + "&n=" + nights + "&w=" + searchKeyword;

            launcherActivityActivityTestRule.launchActivity(new Intent().setData(Uri.parse(deepLink)));

            onView(isRoot()).perform(waitFor(DELAY_SECONDS * 1000));
            onView(withId(R.id.titleTextView)).check(matches(withText(searchKeyword)));
            onView(withId(R.id.subTitleTextView)).check(matches(withText(String.format(Locale.KOREA, "%s - %s, %d박", bookDateTime.getCheckInDateTime("MM.dd(EEE)")//
                , bookDateTime.getCheckOutDateTime("MM.dd(EEE)"), nights))));
        }

        ////////////////////////////////////////////////////////////////////////////////////////////
        // dp=0~
        {
            final int dp = DailyCalendar.compareDateDay(bookDateTime.getCheckInDateTime(DailyCalendar.ISO_8601_FORMAT), DailyCalendar.format(new Date(), DailyCalendar.ISO_8601_FORMAT));
            final String deepLink = "dailyhotel://dailyhotel.co.kr?vc=23&v=hsr&dp=" + dp + "&n=" + nights + "&w=" + searchKeyword;

            launcherActivityActivityTestRule.launchActivity(new Intent().setData(Uri.parse(deepLink)));

            onView(isRoot()).perform(waitFor(DELAY_SECONDS * 1000));
            onView(withId(R.id.titleTextView)).check(matches(withText(searchKeyword)));
            onView(withId(R.id.subTitleTextView)).check(matches(withText(String.format(Locale.KOREA, "%s - %s, %d박", bookDateTime.getCheckInDateTime("MM.dd(EEE)")//
                , bookDateTime.getCheckOutDateTime("MM.dd(EEE)"), nights))));
        }

        ////////////////////////////////////////////////////////////////////////////////////////////
        // week=1234567
        {
            final char[] weeks = {'2', '4', '6'};
            final String deepLink = "dailyhotel://dailyhotel.co.kr?vc=23&v=hsr&week=" + String.valueOf(weeks) + "&n=" + nights + "&w=" + searchKeyword;
            StayBookDateTime weekBookDateTime = getStayBookDateTime(DailyCalendar.format(new Date(), DailyCalendar.ISO_8601_FORMAT), weeks, nights);

            launcherActivityActivityTestRule.launchActivity(new Intent().setData(Uri.parse(deepLink)));

            onView(isRoot()).perform(waitFor(DELAY_SECONDS * 1000));
            onView(withId(R.id.titleTextView)).check(matches(withText(searchKeyword)));
            onView(withId(R.id.subTitleTextView)).check(matches(withText(String.format(Locale.KOREA, "%s - %s, %d박"//
                , weekBookDateTime.getCheckInDateTime("MM.dd(EEE)")//
                , weekBookDateTime.getCheckOutDateTime("MM.dd(EEE)"), nights))));
        }

        ////////////////////////////////////////////////////////////////////////////////////////////
        // d=yyyyMMMdd, s=lp
        {
            final String deepLink = "dailyhotel://dailyhotel.co.kr?vc=23&v=hsr&d=" + bookDateTime.getCheckInDateTime("yyyyMMdd") + "&n=" + nights + "&w=" + searchKeyword + "&s=lp";

            launcherActivityActivityTestRule.launchActivity(new Intent().setData(Uri.parse(deepLink)));

            onView(isRoot()).perform(waitFor(DELAY_SECONDS * 1000));
            onView(withId(R.id.titleTextView)).check(matches(withText(searchKeyword)));
            onView(withId(R.id.subTitleTextView)).check(matches(withText(String.format(Locale.KOREA, "%s - %s, %d박", bookDateTime.getCheckInDateTime("MM.dd(EEE)")//
                , bookDateTime.getCheckOutDateTime("MM.dd(EEE)"), nights))));

            onView(withId(R.id.filterActionTextView)).perform(ViewActions.click());
            onView(isRoot()).perform(waitFor(2000));
            onView(withId(R.id.lowPriceRadioButton)).check(matches(isChecked()));
        }

        ////////////////////////////////////////////////////////////////////////////////////////////
        // dp=0~, s=hp
        {
            final int dp = DailyCalendar.compareDateDay(bookDateTime.getCheckInDateTime(DailyCalendar.ISO_8601_FORMAT), DailyCalendar.format(new Date(), DailyCalendar.ISO_8601_FORMAT));
            final String deepLink = "dailyhotel://dailyhotel.co.kr?vc=23&v=hsr&dp=" + dp + "&n=" + nights + "&w=" + searchKeyword + "&s=hp";

            launcherActivityActivityTestRule.launchActivity(new Intent().setData(Uri.parse(deepLink)));

            onView(isRoot()).perform(waitFor(DELAY_SECONDS * 1000));
            onView(withId(R.id.titleTextView)).check(matches(withText(searchKeyword)));
            onView(withId(R.id.subTitleTextView)).check(matches(withText(String.format(Locale.KOREA, "%s - %s, %d박", bookDateTime.getCheckInDateTime("MM.dd(EEE)")//
                , bookDateTime.getCheckOutDateTime("MM.dd(EEE)"), nights))));

            onView(withId(R.id.filterActionTextView)).perform(ViewActions.click());
            onView(isRoot()).perform(waitFor(2000));
            onView(withId(R.id.highPriceRadioButton)).check(matches(isChecked()));
        }

        ////////////////////////////////////////////////////////////////////////////////////////////
        // week=1234567, s=r
        {
            final char[] weeks = {'2', '4', '6'};
            final String deepLink = "dailyhotel://dailyhotel.co.kr?vc=23&v=hsr&week=" + String.valueOf(weeks) + "&n=" + nights + "&w=" + searchKeyword + "&s=r";
            StayBookDateTime weekBookDateTime = getStayBookDateTime(DailyCalendar.format(new Date(), DailyCalendar.ISO_8601_FORMAT), weeks, nights);

            launcherActivityActivityTestRule.launchActivity(new Intent().setData(Uri.parse(deepLink)));

            onView(isRoot()).perform(waitFor(DELAY_SECONDS * 1000));
            onView(withId(R.id.titleTextView)).check(matches(withText(searchKeyword)));
            onView(withId(R.id.subTitleTextView)).check(matches(withText(String.format(Locale.KOREA, "%s - %s, %d박", weekBookDateTime.getCheckInDateTime("MM.dd(EEE)")//
                , weekBookDateTime.getCheckOutDateTime("MM.dd(EEE)"), nights))));

            onView(withId(R.id.filterActionTextView)).perform(ViewActions.click());
            onView(isRoot()).perform(waitFor(2000));
            onView(withId(R.id.satisfactionRadioButton)).check(matches(isChecked()));
        }
    }

    private StayBookDateTime getStayBookDateTime(String currentDateTime, char[] weeks, int nights) throws Exception
    {
        String bookDateTime = DailyCalendar.searchClosedDayOfWeek(currentDateTime, weeks);

        StayBookDateTime stayBookDateTime = new StayBookDateTime();
        stayBookDateTime.setCheckInDateTime(bookDateTime);
        stayBookDateTime.setCheckOutDateTime(stayBookDateTime.getCheckInDateTime(DailyCalendar.ISO_8601_FORMAT), nights);

        return stayBookDateTime;
    }

    @Test
    public void test_DeepLink_검색결과_해외스테이() throws Exception
    {
        final String searchKeyword = "오사카(및 인근지역)";
        final int index = 179897;
        final String categoryKey = "region";
        final int nights = new Random(System.currentTimeMillis()).nextInt(NIGHTS_RANGE) + 1;
        final int randomDay = new Random(System.currentTimeMillis()).nextInt(DAYS_RANGE) + 1;

        final StayBookDateTime bookDateTime = new StayBookDateTime();
        bookDateTime.setCheckInDateTime(DailyCalendar.format(new Date(), DailyCalendar.ISO_8601_FORMAT), randomDay);
        bookDateTime.setCheckOutDateTime(bookDateTime.getCheckInDateTime(DailyCalendar.ISO_8601_FORMAT), nights);

        // 해외 검색은 시간이 많이 걸려서 3배로 늘렸다.

        ////////////////////////////////////////////////////////////////////////////////////////////
        // d=yyyyMMMdd
        {
            final String deepLink = "dailyhotel://dailyhotel.co.kr?vc=23&v=sosrl&d=" + bookDateTime.getCheckInDateTime("yyyyMMdd") + "&n=" + nights + "&i=" + index + "&t=" + searchKeyword + "&ck=" + categoryKey;

            launcherActivityActivityTestRule.launchActivity(new Intent().setData(Uri.parse(deepLink)));

            onView(isRoot()).perform(waitFor(DELAY_SECONDS * 4000));
            onView(withId(R.id.titleTextView)).check(matches(withText(searchKeyword)));
            onView(withId(R.id.subTitleTextView)).check(matches(withText(String.format(Locale.KOREA, "%s - %s, %d박 돋 성인2, 아동0"//
                , bookDateTime.getCheckInDateTime("M.d(EEE)")//
                , bookDateTime.getCheckOutDateTime("M.d(EEE)"), nights))));
        }

        ////////////////////////////////////////////////////////////////////////////////////////////
        // dp=0~
        {
            final int dp = DailyCalendar.compareDateDay(bookDateTime.getCheckInDateTime(DailyCalendar.ISO_8601_FORMAT), DailyCalendar.format(new Date(), DailyCalendar.ISO_8601_FORMAT));
            final String deepLink = "dailyhotel://dailyhotel.co.kr?vc=23&v=sosrl&dp=" + dp + "&n=" + nights + "&i=" + index + "&t=" + searchKeyword + "&ck=" + categoryKey;

            launcherActivityActivityTestRule.launchActivity(new Intent().setData(Uri.parse(deepLink)));

            onView(isRoot()).perform(waitFor(DELAY_SECONDS * 4000));
            onView(withId(R.id.titleTextView)).check(matches(withText(searchKeyword)));
            onView(withId(R.id.subTitleTextView)).check(matches(withText(String.format(Locale.KOREA, "%s - %s, %d박 돋 성인2, 아동0"//
                , bookDateTime.getCheckInDateTime("M.d(EEE)")//
                , bookDateTime.getCheckOutDateTime("M.d(EEE)"), nights))));
        }

        ////////////////////////////////////////////////////////////////////////////////////////////
        // week=1234567
        {
            final char[] weeks = {'2', '4', '6'};
            final String deepLink = "dailyhotel://dailyhotel.co.kr?vc=23&v=sosrl&week=" + String.valueOf(weeks) + "&n=" + nights + "&i=" + index + "&t=" + searchKeyword + "&ck=" + categoryKey;
            StayBookDateTime weekBookDateTime = getStayBookDateTime(DailyCalendar.format(new Date(), DailyCalendar.ISO_8601_FORMAT), weeks, nights);

            launcherActivityActivityTestRule.launchActivity(new Intent().setData(Uri.parse(deepLink)));

            onView(isRoot()).perform(waitFor(DELAY_SECONDS * 4000));
            onView(withId(R.id.titleTextView)).check(matches(withText(searchKeyword)));
            onView(withId(R.id.subTitleTextView)).check(matches(withText(String.format(Locale.KOREA, "%s - %s, %d박 돋 성인2, 아동0"//
                , weekBookDateTime.getCheckInDateTime("M.d(EEE)")//
                , weekBookDateTime.getCheckOutDateTime("M.d(EEE)"), nights))));
        }

        ////////////////////////////////////////////////////////////////////////////////////////////
        // d=yyyyMMMdd, s=lp
        {
            final String deepLink = "dailyhotel://dailyhotel.co.kr?vc=23&v=sosrl&d=" + bookDateTime.getCheckInDateTime("yyyyMMdd") + "&n=" + nights + "&i=" + index + "&t=" + searchKeyword + "&ck=" + categoryKey + "&s=lp";

            launcherActivityActivityTestRule.launchActivity(new Intent().setData(Uri.parse(deepLink)));

            onView(isRoot()).perform(waitFor(DELAY_SECONDS * 4000));
            onView(withId(R.id.titleTextView)).check(matches(withText(searchKeyword)));
            onView(withId(R.id.subTitleTextView)).check(matches(withText(String.format(Locale.KOREA, "%s - %s, %d박 돋 성인2, 아동0"//
                , bookDateTime.getCheckInDateTime("M.d(EEE)")//
                , bookDateTime.getCheckOutDateTime("M.d(EEE)"), nights))));
        }

        ////////////////////////////////////////////////////////////////////////////////////////////
        // dp=0~, s=hp
        {
            final int dp = DailyCalendar.compareDateDay(bookDateTime.getCheckInDateTime(DailyCalendar.ISO_8601_FORMAT), DailyCalendar.format(new Date(), DailyCalendar.ISO_8601_FORMAT));
            final String deepLink = "dailyhotel://dailyhotel.co.kr?vc=23&v=sosrl&dp=" + dp + "&n=" + nights + "&i=" + index + "&t=" + searchKeyword + "&ck=" + categoryKey + "&s=hp";

            launcherActivityActivityTestRule.launchActivity(new Intent().setData(Uri.parse(deepLink)));

            onView(isRoot()).perform(waitFor(DELAY_SECONDS * 4000));
            onView(withId(R.id.titleTextView)).check(matches(withText(searchKeyword)));
            onView(withId(R.id.subTitleTextView)).check(matches(withText(String.format(Locale.KOREA, "%s - %s, %d박 돋 성인2, 아동0"//
                , bookDateTime.getCheckInDateTime("M.d(EEE)")//
                , bookDateTime.getCheckOutDateTime("M.d(EEE)"), nights))));
        }

        ////////////////////////////////////////////////////////////////////////////////////////////
        // week=1234567, s=r
        {
            final char[] weeks = {'2', '4', '6'};
            final String deepLink = "dailyhotel://dailyhotel.co.kr?vc=23&v=sosrl&week=" + String.valueOf(weeks) + "&n=" + nights + "&i=184245&t=" + searchKeyword + "&ck=" + categoryKey + "&s=r";
            StayBookDateTime weekBookDateTime = getStayBookDateTime(DailyCalendar.format(new Date(), DailyCalendar.ISO_8601_FORMAT), weeks, nights);

            launcherActivityActivityTestRule.launchActivity(new Intent().setData(Uri.parse(deepLink)));

            onView(isRoot()).perform(waitFor(DELAY_SECONDS * 4000));
            onView(withId(R.id.titleTextView)).check(matches(withText(searchKeyword)));
            onView(withId(R.id.subTitleTextView)).check(matches(withText(String.format(Locale.KOREA, "%s - %s, %d박 돋 성인2, 아동0"//
                , weekBookDateTime.getCheckInDateTime("M.d(EEE)")//
                , weekBookDateTime.getCheckOutDateTime("M.d(EEE)"), nights))));
        }
    }

    @Test
    public void test_DeepLink_검색결과_고메() throws Exception
    {
        final String searchKeyword = "뷔페";
        final int randomDay = new Random(System.currentTimeMillis()).nextInt(DAYS_RANGE) + 1;

        final GourmetBookDateTime bookDateTime = new GourmetBookDateTime();
        bookDateTime.setVisitDateTime(DailyCalendar.format(new Date(), DailyCalendar.ISO_8601_FORMAT), randomDay);

        ////////////////////////////////////////////////////////////////////////////////////////////
        // d=yyyyMMMdd
        {
            final String deepLink = "dailyhotel://dailyhotel.co.kr?vc=23&v=gsr&d=" + bookDateTime.getVisitDateTime("yyyyMMdd") + "&w=" + searchKeyword;

            launcherActivityActivityTestRule.launchActivity(new Intent().setData(Uri.parse(deepLink)));

            onView(isRoot()).perform(waitFor(DELAY_SECONDS * 1000));
            onView(withId(R.id.titleTextView)).check(matches(withText(searchKeyword)));
            onView(withId(R.id.subTitleTextView)).check(matches(withText(bookDateTime.getVisitDateTime("MM.dd(EEE)"))));
        }

        ////////////////////////////////////////////////////////////////////////////////////////////
        // dp=0~
        {
            final int dp = DailyCalendar.compareDateDay(bookDateTime.getVisitDateTime(DailyCalendar.ISO_8601_FORMAT), DailyCalendar.format(new Date(), DailyCalendar.ISO_8601_FORMAT));
            final String deepLink = "dailyhotel://dailyhotel.co.kr?vc=23&v=gsr&dp=" + dp + "&w=" + searchKeyword;

            launcherActivityActivityTestRule.launchActivity(new Intent().setData(Uri.parse(deepLink)));

            onView(isRoot()).perform(waitFor(DELAY_SECONDS * 1000));
            onView(withId(R.id.titleTextView)).check(matches(withText(searchKeyword)));
            onView(withId(R.id.subTitleTextView)).check(matches(withText(bookDateTime.getVisitDateTime("MM.dd(EEE)"))));
        }

        ////////////////////////////////////////////////////////////////////////////////////////////
        // week=1234567
        {
            final char[] weeks = {'2', '4', '6'};
            final String deepLink = "dailyhotel://dailyhotel.co.kr?vc=23&v=gsr&week=" + String.valueOf(weeks) + "&w=" + searchKeyword;
            GourmetBookDateTime weekBookDateTeim = getGourmetBookDateTime(DailyCalendar.format(new Date(), DailyCalendar.ISO_8601_FORMAT), weeks);

            launcherActivityActivityTestRule.launchActivity(new Intent().setData(Uri.parse(deepLink)));

            onView(isRoot()).perform(waitFor(DELAY_SECONDS * 1000));
            onView(withId(R.id.titleTextView)).check(matches(withText(searchKeyword)));
            onView(withId(R.id.subTitleTextView)).check(matches(withText(weekBookDateTeim.getVisitDateTime("MM.dd(EEE)"))));
        }

        ////////////////////////////////////////////////////////////////////////////////////////////
        // d=yyyyMMMdd, s=lp
        {
            final String deepLink = "dailyhotel://dailyhotel.co.kr?vc=23&v=gsr&d=" + bookDateTime.getVisitDateTime("yyyyMMdd") + "&w=" + searchKeyword + "&s=lp";

            launcherActivityActivityTestRule.launchActivity(new Intent().setData(Uri.parse(deepLink)));

            onView(isRoot()).perform(waitFor(DELAY_SECONDS * 1000));
            onView(withId(R.id.titleTextView)).check(matches(withText(searchKeyword)));
            onView(withId(R.id.subTitleTextView)).check(matches(withText(bookDateTime.getVisitDateTime("MM.dd(EEE)"))));

            onView(withId(R.id.filterActionTextView)).perform(ViewActions.click());
            onView(isRoot()).perform(waitFor(2000));
            onView(withId(R.id.lowPriceRadioButton)).check(matches(isChecked()));
        }

        ////////////////////////////////////////////////////////////////////////////////////////////
        // dp=0~, s=hp
        {
            final int dp = DailyCalendar.compareDateDay(bookDateTime.getVisitDateTime(DailyCalendar.ISO_8601_FORMAT), DailyCalendar.format(new Date(), DailyCalendar.ISO_8601_FORMAT));
            final String deepLink = "dailyhotel://dailyhotel.co.kr?vc=23&v=gsr&dp=" + dp + "&w=" + searchKeyword + "&s=hp";

            launcherActivityActivityTestRule.launchActivity(new Intent().setData(Uri.parse(deepLink)));

            onView(isRoot()).perform(waitFor(DELAY_SECONDS * 1000));
            onView(withId(R.id.titleTextView)).check(matches(withText(searchKeyword)));
            onView(withId(R.id.subTitleTextView)).check(matches(withText(bookDateTime.getVisitDateTime("MM.dd(EEE)"))));

            onView(withId(R.id.filterActionTextView)).perform(ViewActions.click());
            onView(isRoot()).perform(waitFor(2000));
            onView(withId(R.id.highPriceRadioButton)).check(matches(isChecked()));
        }

        ////////////////////////////////////////////////////////////////////////////////////////////
